umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_sulfolane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h2#v2" "1" "C#h2#v2" "2" "C#h2#v2" "3" "C#h2#v2" "4" "S#v6" "5" "O#n2#v2" "6" "O#n2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "1"] ["4" "0" "1"] ["4" "5" "2"] ["4" "6" "2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h2#v2" "1" "C#h2#v2" "2" "C#h2#v2" "3" "C#h2#v2" "4" "S#v6" "5" "O#n2#v2" "6" "O#n2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "1"] ["4" "0" "1"] ["4" "5" "2"] ["4" "6" "2"]] :charge 0 :spin "#u0 #s1"}}}
